--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rollup": "^0.55.0",
+    "rollup-plugin-cleanup": "^2.0.0",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-license": "^0.5.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "axios": "^1.1.3",
