--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-yaml": "^4.0.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/styled-components": "^5.1.14",
